--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,6 +29,7 @@
           background-clip: text;
           }
         }
+        .colorizedText {clear:both;}
     </style> 
     <link rel="stylesheet" href="static/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="static/css/main.css">
